--- a/apps/production/monitoring/grafana/certificate.yaml
+++ b/apps/production/monitoring/grafana/certificate.yaml
@@ -5,14 +5,14 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: grafana-activescott-com
+  name: grafana-nerdsbythehour-com
 spec:
   # the secret is put in this secret by the Certificate, and should match the secretName in ingress.
   # secret's DNS must be in public DNS (so letsencrypt can find it) and local DNS (so local LAN hosts can find it)
-  secretName: grafana-activescott-com-cert
+  secretName: grafana-nerdsbythehour-com-cert
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: grafana.activescott.com
+  commonName: grafana.jimwilleke.com
   dnsNames:
-  - grafana.activescott.com
+  - grafana.jimwilleke.com
