--- a/apps/production/monitoring/prometheus/prometheus-ingress.yaml
+++ b/apps/production/monitoring/prometheus/prometheus-ingress.yaml
@@ -9,11 +9,11 @@ spec:
   tls:
   # The patches in kustomize are ugly here (the patch is basically the whole Ingress). This could probably be made cleaner using a configMap + configMapGenerator or something to grab these values from a simple property file or labels or something
   - hosts:
-      - prometheus.activescott.com # e.g. photos.example.com
-    secretName: prometheus-activescott-com-tls #e.g. cert-example-com
+      - prometheus.jimwilleke.com # e.g. photos.example.com
+    secretName: prometheus-nerdsbythehour-com-tls #e.g. cert-example-com
   rules:
   # don't forget to set this up in DNS
-  - host: prometheus.activescott.com # e.g. photos.example.com
+  - host: prometheus.jimwilleke.com # e.g. photos.example.com
     http:
       paths:
       - path: /
