--- a/apps/production/photoprism/kustomization.yaml
+++ b/apps/production/photoprism/kustomization.yaml
@@ -7,7 +7,7 @@ buildMetadata: [originAnnotations, transformerAnnotations]
 
 labels:
   - pairs:
-      # use `app.activescott.com/name` to avoid conflicts with other people's resources using "app" label.
-      app.activescott.com/name: photoprism
+      # use `app.jimwilleke.com/name` to avoid conflicts with other people's resources using "app" label.
+      app.jimwilleke.com/name: photoprism
       # NOTE: tenet is specified in the overlays
-      #app.activescott.com/tenant:
+      #app.jimwilleke.com/tenant:
