--- a/apps/production/photoprism/scott/kustomization.yaml
+++ b/apps/production/photoprism/scott/kustomization.yaml
@@ -13,4 +13,4 @@ namespace: photoprism-scott
 
 labels:
   - pairs:
-      app.activescott.com/tenant: scott
+      app.jimwilleke.com/tenant: scott
