--- a/apps/base/plex/plex-statefulset.yaml
+++ b/apps/base/plex/plex-statefulset.yaml
@@ -21,7 +21,7 @@ spec:
         # tags: https://hub.docker.com/r/plexinc/pms-docker/tags/
         # release notes: https://forums.plex.tv/t/plex-media-server/30447/612
         - name: plex
-          # NOTE: with subsequent 2 versions *potentially* having DVR/TV transcoding issues. See https://forums.plex.tv/t/error-4294967279/845549/3?u=activescott
+          # NOTE: with subsequent 2 versions *potentially* having DVR/TV transcoding issues. See https://forums.plex.tv/t/error-4294967279/845549/3?u=jimwilleke
           # Seen Live TV DVR freezing issues with versions: I have Plex Server version plexinc/pms-docker:1.32.4.7195-7c8f9d3b6 , plexinc/pms-docker:1.32.1.6999-91e1e2e2c , plexinc/pms-docker:1.31.1.6782-77dfff442
           image: plexinc/pms-docker:1.41.6.9685-d301f511a
 
