--- a/apps/base/tayle/app-deployment.yaml
+++ b/apps/base/tayle/app-deployment.yaml
@@ -11,7 +11,7 @@ spec:
     metadata:
       labels:
         app: app
-        app.activescott.com/component: app
+        app.jimwilleke.com/component: app
     spec:
       imagePullSecrets:
         - name: github-container-registry-secret
