--- a/apps/production/home-assistant/config-home-assistant/configuration.yaml
+++ b/apps/production/home-assistant/config-home-assistant/configuration.yaml
@@ -18,18 +18,18 @@ command_line:
   - sensor:
       name: HASS Cert Expiry CLI Sensor
       unique_id: hass_cert_expiry_cli_sensor
-      command: curl https://hass.activescott.com -v 2>&1 | grep "expire date" | awk '{for (i=4; i<NF; i++) printf $i " "; print $NF}'
+      command: curl https://hass.jimwilleke.com -v 2>&1 | grep "expire date" | awk '{for (i=4; i<NF; i++) printf $i " "; print $NF}'
       scan_interval: 1440 # seconds: 1440=60*60*4
 
 homeassistant:
   # see https://www.home-assistant.io/docs/configuration/basic/
   name: Home
-  unit_system: us_customary
+  unit_system: imperial
   currency: USD
   country: US
   time_zone: "America/Los_Angeles"
-  external_url: "https://hass.activescott.com:8123/"
-  internal_url: "https://hass.activescott.com:8123/"
+  external_url: "https://hass.jimwilleke.com:8123/"
+  internal_url: "https://hass.jimwilleke.com:8123/"
 
   customize: !include customize.yaml
 
