--- a/apps/production/home-assistant/kustomization.yaml
+++ b/apps/production/home-assistant/kustomization.yaml
@@ -9,8 +9,8 @@ namespace: home-assistant
 labels:
   - pairs:
       # NOTE: metrics-server seems to label all of their resources with `k8s-app: metrics-server`
-      # use `app.activescott.com/name` to avoid conflicts with other people's resources using "app" label.
-      app.activescott.com/name: home-assistant
+      # use `app.jimwilleke.com/name` to avoid conflicts with other people's resources using "app" label.
+      app.jimwilleke.com/name: home-assistant
 
 secretGenerator:
   - name: hass-creds
