--- a/apps/production/monitoring/kube-state-metrics/kustomization.yaml
+++ b/apps/production/monitoring/kube-state-metrics/kustomization.yaml
@@ -1,7 +1,7 @@
 resources:
   - ../../../base/monitoring/kube-state-metrics
 
-# NOTE: fine to leave this in kube-system namespace. we tag everything with app.activescott.com/name anyway
+# NOTE: fine to leave this in kube-system namespace. we tag everything with app.jimwilleke.com/name anyway
 #namespace: monitoring-kube-state-metrics
 
 buildMetadata: [originAnnotations, transformerAnnotations]
@@ -9,5 +9,5 @@ buildMetadata: [originAnnotations, transformerAnnotations]
 labels:
   - pairs:
       # NOTE: metrics-server seems to label all of their resources with `k8s-app: metrics-server`
-      # use `app.activescott.com/name` to avoid conflicts with other people's resources using "app" label.
-      app.activescott.com/name: kube-state-metrics
+      # use `app.jimwilleke.com/name` to avoid conflicts with other people's resources using "app" label.
+      app.jimwilleke.com/name: kube-state-metrics
