--- a/apps/production/monitoring/prometheus-blackbox-exporter/kustomization.yaml
+++ b/apps/production/monitoring/prometheus-blackbox-exporter/kustomization.yaml
@@ -10,5 +10,5 @@ configMapGenerator:
 
 labels:
   - pairs:
-      # use `app.activescott.com/name` to avoid conflicts with other people's resources using "app" label.
-      app.activescott.com/name: blackbox-exporter
+      # use `app.jimwilleke.com/name` to avoid conflicts with other people's resources using "app" label.
+      app.jimwilleke.com/name: blackbox-exporter
