--- a/apps/production/monitoring/prometheus/certificate.yaml
+++ b/apps/production/monitoring/prometheus/certificate.yaml
@@ -5,14 +5,14 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: prometheus-activescott-com
+  name: prometheus-nerdsbythehour-com
 spec:
   # the secret is put in this secret by the Certificate, and should match the secretName in ingress.
   # secret's DNS must be in public DNS (so letsencrypt can find it) and local DNS (so local LAN hosts can find it)
-  secretName: prometheus-activescott-com-tls
+  secretName: prometheus-nerdsbythehour-com-tls
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: prometheus.activescott.com
+  commonName: prometheus.jimwilleke.com
   dnsNames:
-  - prometheus.activescott.com
+  - prometheus.jimwilleke.com
