--- a/apps/production/monitoring/prometheus/config/alerting-rules.tayle.yaml
+++ b/apps/production/monitoring/prometheus/config/alerting-rules.tayle.yaml
@@ -15,7 +15,7 @@ groups:
           severity: warning
         annotations:
           summary: |
-            Tayle Pod not ready. This may pass if it was a momentary deployment or something. See https://grafana.activescott.com/d/cc030cf0-cde1-46c1-bc49-fd5c88d7f002/tayle-prod-status?orgId=1&from=now-12h&to=now&refresh=1m
+            Tayle Pod not ready. This may pass if it was a momentary deployment or something. See https://grafana.jimwilleke.com/d/cc030cf0-cde1-46c1-bc49-fd5c88d7f002/tayle-prod-status?orgId=1&from=now-12h&to=now&refresh=1m
 
       - alert: DeploymentNotAvailable
         expr: kube_deployment_status_condition{exported_namespace="$namespace",condition="Available",status="false"}>0
@@ -28,7 +28,7 @@ groups:
           severity: critical
         annotations:
           summary: |
-            Tayle Deployment not available. With a deployment that isn't available Tayle is down! See https://grafana.activescott.com/d/cc030cf0-cde1-46c1-bc49-fd5c88d7f002/tayle-prod-status?orgId=1&from=now-12h&to=now&refresh=1m
+            Tayle Deployment not available. With a deployment that isn't available Tayle is down! See https://grafana.jimwilleke.com/d/cc030cf0-cde1-46c1-bc49-fd5c88d7f002/tayle-prod-status?orgId=1&from=now-12h&to=now&refresh=1m
 
       - alert: StatefulSetNotReady
         expr: kube_statefulset_status_replicas_ready{exported_namespace="$namespace"}>0
@@ -41,4 +41,4 @@ groups:
           severity: critical
         annotations:
           summary: |
-            Tayle StatefulSet has no ready replicas. Without a Statefulset that is ready Tayle is down! See https://grafana.activescott.com/d/cc030cf0-cde1-46c1-bc49-fd5c88d7f002/tayle-prod-status?orgId=1&from=now-12h&to=now&refresh=1m
+            Tayle StatefulSet has no ready replicas. Without a Statefulset that is ready Tayle is down! See https://grafana.jimwilleke.com/d/cc030cf0-cde1-46c1-bc49-fd5c88d7f002/tayle-prod-status?orgId=1&from=now-12h&to=now&refresh=1m
