--- a/apps/production/plex/kustomization.yaml
+++ b/apps/production/plex/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
 labels:
   - pairs:
       # NOTE: metrics-server seems to label all of their resources with `k8s-app: metrics-server`
-      # use `app.activescott.com/name` to avoid conflicts with other people's resources using "app" label.
-      app.activescott.com/name: Plex
+      # use `app.jimwilleke.com/name` to avoid conflicts with other people's resources using "app" label.
+      app.jimwilleke.com/name: Plex
