--- a/apps/production/transmission/kustomization.yaml
+++ b/apps/production/transmission/kustomization.yaml
@@ -7,8 +7,8 @@ buildMetadata: [originAnnotations, transformerAnnotations]
 labels:
   - pairs:
       # NOTE: metrics-server seems to label all of their resources with `k8s-app: metrics-server`
-      # use `app.activescott.com/name` to avoid conflicts with other people's resources using "app" label.
-      app.activescott.com/name: transmission
+      # use `app.jimwilleke.com/name` to avoid conflicts with other people's resources using "app" label.
+      app.jimwilleke.com/name: transmission
 
 namespace: transmission
 
