--- a/infrastructure/base/configs/image-scanning-webhook-receiver/certificate.yaml
+++ b/infrastructure/base/configs/image-scanning-webhook-receiver/certificate.yaml
@@ -5,13 +5,13 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: flux-webhook-activescott-com
+  name: flux-webhook-nerdsbythehour-com
 spec:
   # the secret is put here and matches a value in the ingress
-  secretName: flux-webhook-activescott-com-tls
+  secretName: flux-webhook-nerdsbythehour-com-tls
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: flux-webhook.activescott.com
+  commonName: flux-webhook.jimwilleke.com
   dnsNames:
-    - flux-webhook.activescott.com
+    - flux-webhook.jimwilleke.com
