Pull out help import.

--- a/apps/base/cert-manager/base/kustomization.yaml
+++ b/apps/base/cert-manager/base/kustomization.yaml
@@ -1,3 +1,5 @@
 resources:
-- ./cert-manager-import
+resources:
+  - cert-manager-deployment.yaml
+  - cert-manager-cainjector-deployment.yaml
 - ./other
