--- a/apps/production/filebrowser/ingress.yaml
+++ b/apps/production/filebrowser/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
-    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forwardauth@kubernetescrd
+    # traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forwardauth@kubernetescrd  # Temporarily disabled until provider is configured
 spec:
   ingressClassName: traefik
   tls:
