--- a/apps/production/guest-services/openspeedtest/ingress.yaml
+++ b/apps/production/guest-services/openspeedtest/ingress.yaml
@@ -8,6 +8,7 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
     traefik.ingress.kubernetes.io/router.priority: "100"
+    traefik.ingress.kubernetes.io/router.middlewares: guest-services-openspeedtest-stripprefix@kubernetescrd
 spec:
   ingressClassName: traefik
   tls:
