--- a/apps/production/amdwiki/deployment.yaml
+++ b/apps/production/amdwiki/deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: amdwiki
     spec:
+      enableServiceLinks: false  # Disable automatic service environment variable injection
       containers:
       - name: amdwiki
         image: amdwiki:latest
@@ -69,7 +70,7 @@ spec:
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
-          failureThreshold: 10
+          failureThreshold: 20  # Increased from 10 to allow more time for startup
 
       volumes:
       # Wiki pages from existing amdWiki directory
