--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ dev-notes.md
 
 # Private/local configuration files
 private/
+security/2025-12-11-nerdsbythehour.com-Vulnerabilities.pdf
+security/nerdsbythehour.com_MJ1ZB7904715_ISO27001-A_Vulnerabilities.pdf
+security/nerdsbythehour.com_MJ1ZB7904715_Medium_Vulnerabilities.pdf
+security/nerdsbythehour.com_MJ1ZB7904715_OWASP_Vulnerabilities.pdf
+security/nerdsbythehour.com_MJ1ZB7904715_PCIDSS_Vulnerabilities.pdf
