--- a/apps/production/monitoring/node-exporter/kustomization.yaml
+++ b/apps/production/monitoring/node-exporter/kustomization.yaml
@@ -7,6 +7,23 @@ resources:
   - node-exporter-daemonset.yaml
   - node-exporter-service.yaml
 
+patches:
+  - patch: |
+      apiVersion: apps/v1
+      kind: DaemonSet
+      metadata:
+        name: node-exporter
+      spec:
+        template:
+          spec:
+            containers:
+            - name: node-exporter
+              args:
+              - --no-collector.systemd  # Disable systemd collector to avoid D-Bus errors
+    target:
+      kind: DaemonSet
+      name: node-exporter
+
 labels:
   - pairs:
       app.jimwilleke.com/name: node-exporter
