OTLP receivers creations

--- a/apps/production/monitoring/kustomization.yaml
+++ b/apps/production/monitoring/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ./prometheus-alertmanager
   - ./prometheus-blackbox-exporter
   - ./grafana
+  - ./otel-collector
 
 namespace: monitoring
 
